--- a/doc/reference.tex
+++ b/doc/reference.tex
@@ -36,8 +36,7 @@ gabriel [dot] reno [at]  gmail.com}
 \maketitle
 
 \begin{abstract}
-
-
+MISTARtools is a set of command-line utilities to store allele count data, merge and split dataset, compute summary statistics and exporting data to various formats.
 \end{abstract}
 
 \tableofcontents
@@ -51,7 +50,6 @@ MISTARtools aims at storing allele frequency information for a given individual 
 Program & Use \\
 \hline
 23andme2mistar & Create a mistartools file from 23andme file \\
-affyVCF2mistar & Create a mistartools file from Affymetrix microarray data \\
 axt2mistar &  Create a mistartools file from axt files \\
            & representing multiple sequence alignement  \\
 bam2mistar &  Create a mistartools file from a BAM file \\
